--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -1,6 +1,7 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+
 /**
  * A region that contains mostly site-oriented content, rather than page-specific content.
  *
@@ -8,5 +9,5 @@
  *
  * Within any `document` or `application`, the author **SHOULD** mark no more than one element with the `banner` role.
  */
-[role='banner'] {
-}
+// [role='banner'] {
+// }
