--- a/source/stylesheets/layout/_lists.scss
+++ b/source/stylesheets/layout/_lists.scss
@@ -1,12 +1,13 @@
 /* LISTS
 ============================================================================ */
+
 /**
  * @see http://www.456bereastreet.com/archive/201105/styling_ordered_list_numbers/
  */
 ul,
 ol {
-  margin: 0;
   padding-left: 1em;
+  margin: 0;
 }
 
 ol {
@@ -19,20 +20,18 @@ ol {
  * @see https://github.com/necolas/normalize.css/issues/334
  */
 article li {
-
-  list-style: none;
-  margin: 0;
-
-  padding-left: 0;
   position: relative;
+  padding-left: 0;
+
+  margin: 0;
+  list-style: none;
 
   &::before {
-
-    font-weight: bold;
-    left: -0.5em;
     position: absolute;
+    left: -0.5em;
 
     z-index: layer('default'); // required to prevent Blink clipping issues on columns
+    font-weight: $font-weights('bold');
   }
 
   &:last-child {
@@ -45,15 +44,15 @@ article ul > li::before {
 }
 
 article ol > li::before {
-
-  content: counter(li) '.\00a0';
-  counter-increment: li;
   left: 1em;
+  content: counter(li) '.\00a0';
+
+  counter-increment: li;
 }
 
-li ol,
-li ul {
-}
+// li ol,
+// li ul {
+// }
 
 /* definition
 ---------------------------------------------------------------------------- */
@@ -65,12 +64,12 @@ dl {
 
 dt,
 dd {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 dt {
-  font-weight: bold;
+  font-weight: $font-weights('bold');
 }
 
 dd {
