--- a/source/stylesheets/abstracts/_config.scss
+++ b/source/stylesheets/abstracts/_config.scss
@@ -190,10 +190,12 @@ $_i: $_mobile-columns;
 
   @each $name, $value in $breakpoints {
     $em-value: ($value / $base-value) * 1em;
-    $new-breakpoints: map-merge($new-breakpoints,
-    (
-      $name: $em-value,
-    ));
+    $new-breakpoints: map-merge(
+      $new-breakpoints,
+      (
+        $name: $em-value,
+      )
+    );
   }
 
   @return $new-breakpoints;
@@ -202,14 +204,16 @@ $_i: $_mobile-columns;
 /// Breakpoints map
 /// @prop {String} keys - Keys are identifiers mapped to a given length
 /// @prop {Map} values - Values are actual breakpoints expressed in pixels
-$breakpoints: _im-to-em((
-  'phone__portrait': 320px,
-  'phone__landscape': 480px,
-  'tablet__portrait__portrait': 768px,
-  'tablet__portrait__landscape': 1024px,
-  'tablet__landscape': 1280px,
-  'wide': 1600px,
-)) !default;
+$breakpoints: _im-to-em(
+  (
+    'phone__portrait': 320px,
+    'phone__landscape': 480px,
+    'tablet__portrait__portrait': 768px,
+    'tablet__portrait__landscape': 1024px,
+    'tablet__landscape': 1280px,
+    'wide': 1600px,
+  )
+) !default;
 
 $toggle-breakpoints: (
   'toggle-table-layout': 48em,
@@ -230,18 +234,22 @@ $breakpoints: map-merge($breakpoints, $toggle-breakpoints);
 $max-width: 80em !default; // 1180px
 $max-width--narrow: 40.75em; // 668 px
 
-$breakpoints: map-merge($breakpoints,
-(
-  '#{$_mobile-columns}col': $_device-width,
-));
+$breakpoints: map-merge(
+  $breakpoints,
+  (
+    '#{$_mobile-columns}col': $_device-width,
+  )
+);
 
 @while $_device-width <= $max-width {
   $_device-width: $_device-width / $_i * ($_i + 1);
   $_i: $_i + 1;
-  $breakpoints: map-merge($breakpoints,
-  (
-    '#{$_i}col': $_device-width,
-  ));
+  $breakpoints: map-merge(
+    $breakpoints,
+    (
+      '#{$_i}col': $_device-width,
+    )
+  );
 }
 
 /// Z-indexes map, gathering all Z layers of the application. Avoid to edit it.
@@ -266,19 +274,23 @@ $base-url: '/assets/' !default;
 
   @each $name, $value in $breakpoints {
     $px-value: if(unit($value) == 'em', $value / 1em * $base-value, $value);
-    $new-breakpoints: map-merge($new-breakpoints,
-    (
-      $name: $px-value,
-    ));
+    $new-breakpoints: map-merge(
+      $new-breakpoints,
+      (
+        $name: $px-value,
+      )
+    );
 
     @if (unit($value) != 'em' and unit($value) != 'px') {
       @error 'all media queries units should be either `em` or `px`. `#{unit($value)}` given.';
     } @else {
       $px-value: if(unit($value) == 'em', $value / 1em * $base-value, $value);
-      $new-breakpoints: map-merge($new-breakpoints,
-      (
-        $name: $px-value,
-      ));
+      $new-breakpoints: map-merge(
+        $new-breakpoints,
+        (
+          $name: $px-value,
+        )
+      );
     }
   }
 
