--- a/source/stylesheets/abstracts/_font-stacks.scss
+++ b/source/stylesheets/abstracts/_font-stacks.scss
@@ -13,8 +13,7 @@
 // Android: 'Roboto',
 // Basic web fallback: 'Helvetica Neue', Arial, sans-serif !default;
 
-$native-font-stack: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI',
-  'Roboto', 'Helvetica Neue', Arial, sans-serif !default;
+$native-font-stack: -apple-system, system-ui, blinkmacsystemfont, 'Segoe UI', 'Roboto', 'Helvetica Neue', arial, sans-serif !default;
 
 ///
 /// Default font stack for code samples, considering the platform.
@@ -30,18 +29,16 @@ $native-font-stack: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI',
 /// 	font-family: $basic-code-font-stack;
 /// }
 ///
-$basic-code-font-stack: Consolas, 'Liberation Mono', Menlo, Courier, monospace !default;
+$basic-code-font-stack: consolas, 'Liberation Mono', menlo, courier, monospace !default;
 
-$basic-title-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue',
-  'Helvetica', 'Arial', sans-serif !default;
+$basic-title-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
 
 /// Font stack for conjunctions or prepositions
 ///
 /// @example html
 /// The Elements <span class="alt">of</span> Typographic Style
 ///
-$alt-font-stack: 'baskerville italic', 'Warnock Pro', 'Goudy Old Style',
-  'Palatino', 'palatino linotype', 'Book Antiqua', 'Georgia', serif;
+$alt-font-stack: 'baskerville italic', 'Warnock Pro', 'Goudy Old Style', 'Palatino', 'palatino linotype', 'Book Antiqua', 'Georgia', serif;
 
 /// Font stack for the _&_ used as a conjunction
 ///
@@ -50,10 +47,8 @@ $alt-font-stack: 'baskerville italic', 'Warnock Pro', 'Goudy Old Style',
 /// @example html
 /// <h1>This <span class="amp">&amp;</span> that</h1>
 ///
-$ampersand-font-stack: 'Cochin', 'Hoefler Titling', 'Requiem', 'Hoefler Text',
-  'Baskerville', 'Baskerville MT', 'Urw Chancery L', 'Goudy Old Style',
-  'Palatino', 'Palatino Linotype', 'Urw Palladio L', 'Constantia',
-  'Book Antiqua', serif;
+$ampersand-font-stack: 'Cochin', 'Hoefler Titling', 'Requiem', 'Hoefler Text', 'Baskerville', 'Baskerville MT', 'Urw Chancery L',
+  'Goudy Old Style', 'Palatino', 'Palatino Linotype', 'Urw Palladio L', 'Constantia', 'Book Antiqua', serif;
 
 /// Serif font-stacks
 
@@ -65,28 +60,23 @@ $ampersand-font-stack: 'Cochin', 'Hoefler Titling', 'Requiem', 'Hoefler Text',
 ///
 /// @link http://code.stephenmorley.org/html-and-css/the-myth-of-web-safe-fonts/
 /// @link http://www.cssfontstack.com/Baskerville
-$baskerville-font-stack: 'Baskerville', 'Baskerville Old Face', 'Hoefler Text',
-  'Garamond', 'Times New Roman', serif !default;
+$baskerville-font-stack: 'Baskerville', 'Baskerville Old Face', 'Hoefler Text', 'Garamond', 'Times New Roman', serif !default;
 
 /// Be aware that Geneva, Baskerville Old Face and Big Caslon has no bold and italic. They are faked to bold and italic.
 ///
 /// @link http://www.awayback.com/revised-font-stack/
 /// @link http://www.cssfontstack.com/Big-Caslon
-$big-caslon-font-stack: 'Big Caslon', 'Book Antiqua', 'Palatino Linotype',
-  'Georgia', serif !default;
+$big-caslon-font-stack: 'Big Caslon', 'Book Antiqua', 'Palatino Linotype', 'Georgia', serif !default;
 
 /// @link http://www.cssfontstack.com/Bodoni-MT
-$bodoni-mt-font-stack: 'Bodoni MT', 'Didot', 'Didot LT STD', 'Hoefler Text',
-  'Garamond', 'Times New Roman', serif !default;
+$bodoni-mt-font-stack: 'Bodoni MT', 'Didot', 'Didot LT STD', 'Hoefler Text', 'Garamond', 'Times New Roman', serif !default;
 
 /// @link http://www.cssfontstack.com/Book-Antiqua
-$book-antiqua-font-stack: 'Book Antiqua', 'Palatino', 'Palatino Linotype',
-  'Palatino LT STD', 'Georgia', serif !default;
+$book-antiqua-font-stack: 'Book Antiqua', 'Palatino', 'Palatino Linotype', 'Palatino LT STD', 'Georgia', serif !default;
 
 /// @link http://www.cssfontstack.com/Calisto-MT
-$calisto-mt-font-stack: 'Calisto MT', 'Bookman Old Style', 'Bookman',
-  'Goudy Old Style', 'Garamond', 'Hoefler Text', 'Bitstream Charter', 'Georgia',
-  serif !default;
+$calisto-mt-font-stack: 'Calisto MT', 'Bookman Old Style', 'Bookman', 'Goudy Old Style', 'Garamond', 'Hoefler Text', 'Bitstream Charter',
+  'Georgia', serif !default;
 
 /// @link http://www.cssfontstack.com/Cambria
 $cambria-font-stack: 'Cambria', 'Georgia', serif !default;
@@ -97,15 +87,13 @@ $cambria-font-stack: 'Cambria', 'Georgia', serif !default;
 ///
 /// @link http://www.awayback.com/revised-font-stack/
 /// @link http://www.cssfontstack.com/Didot
-$didot-font-stack: 'Didot', 'Didot LT STD', 'Hoefler Text', 'Garamond',
-  'Times New Roman', serif !default;
+$didot-font-stack: 'Didot', 'Didot LT STD', 'Hoefler Text', 'Garamond', 'Times New Roman', serif !default;
 
 /// Due to smaller x-height, Caslon, Didot, Garamond, Baskerville and Hoefler Text should be set at minimum of 14 pixels or above.
 /// Be aware that some of the fonts, like Garamond, Baskerville and Didot, are not as readable on screen as Georgia.
 /// @link http://www.awayback.com/revised-font-stack/
 /// @link http://www.cssfontstack.com/Garamond
-$garamond-font-stack: 'Garamond', 'Baskerville', 'Baskerville Old Face',
-  'Hoefler Text', 'Times New Roman', serif !default;
+$garamond-font-stack: 'Garamond', 'Baskerville', 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif !default;
 
 /// **Do not** mix Georgia and Times. They're too different
 ///
@@ -114,14 +102,12 @@ $garamond-font-stack: 'Garamond', 'Baskerville', 'Baskerville Old Face',
 $georgia-font-stack: 'Georgia', 'Utopia', 'Charter', serif !default;
 
 /// @link http://www.cssfontstack.com/Goudy-Old-Style
-$goudy-old-style-font-stack: 'Goudy Old Style', 'Garamond', 'Big Caslon',
-  'Times New Roman', serif !default;
+$goudy-old-style-font-stack: 'Goudy Old Style', 'Garamond', 'Big Caslon', 'Times New Roman', serif !default;
 
 /// Due to smaller x-height, Caslon, Didot, Garamond, Baskerville and Hoefler Text should be set at minimum of 14 pixels or above.
 /// @link http://www.awayback.com/revised-font-stack/
 /// @link http://www.cssfontstack.com/Hoefler-Text
-$hoefler-text-font-stack: 'Hoefler Text', 'Baskerville old face', 'Garamond',
-  'Times New Roman', serif !default;
+$hoefler-text-font-stack: 'Hoefler Text', 'Baskerville old face', 'Garamond', 'Times New Roman', serif !default;
 
 /// @link http://www.cssfontstack.com/Lucida-Bright
 $lucidia-bright-font-stack: 'Lucida Bright', 'Georgia', serif !default;
@@ -130,23 +116,20 @@ $lucidia-bright-font-stack: 'Lucida Bright', 'Georgia', serif !default;
 ///
 /// @link http://code.stephenmorley.org/html-and-css/the-myth-of-web-safe-fonts/
 /// @link http://www.cssfontstack.com/Palatino
-$palatino-font-stack: 'Palatino', 'Palatino Linotype', 'Palatino LT STD',
-  'Book Antiqua', serif !default;
+$palatino-font-stack: 'Palatino', 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', serif !default;
 
 /// @link http://www.cssfontstack.com/Perpetua
-$perpetua-font-stack: 'Perpetua', 'Baskerville', 'Big Caslon',
-  'Palatino Linotype', 'Palatino', 'URW Palladio L', 'Nimbus Roman No9 L', serif !default;
+$perpetua-font-stack: 'Perpetua', 'Baskerville', 'Big Caslon', 'Palatino Linotype', 'Palatino', 'URW Palladio L', 'Nimbus Roman No9 L',
+  serif !default;
 
 /// @link http://www.cssfontstack.com/Rockwell
-$rockwell-font-stack: 'Rockwell', 'Courier Bold', 'Courier', 'Georgia', 'Times',
-  'Times New Roman', serif !default;
+$rockwell-font-stack: 'Rockwell', 'Courier Bold', 'Courier', 'Georgia', 'Times', 'Times New Roman', serif !default;
 
 /// @link http://www.cssfontstack.com/Rockwell-Extra-Bold
 $rockwell-bold-font-stack: 'Rockwell Extra Bold', 'Rockwell Bold', monospace !default;
 
 /// @link http://www.cssfontstack.com/Times-New-Roman
-$times-new-roman-font-stack: 'TimesNewRoman', 'Times New Roman', 'Times',
-  'Baskerville', serif !default;
+$times-new-roman-font-stack: 'TimesNewRoman', 'Times New Roman', 'Times', 'Baskerville', serif !default;
 
 /// Sans-Serif font-stacks
 
@@ -160,30 +143,24 @@ $arial-black-font-stack: 'Arial Black', 'Arial Bold', 'Gadget', sans-serif !defa
 $arial-narrow-font-stack: 'Arial Narrow', 'Arial', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Arial-Rounded-MT-Bold
-$arial-rounded-font-stack: 'Arial Rounded MT Bold', 'Helvetica Rounded', 'Arial',
-  sans-serif !default;
+$arial-rounded-font-stack: 'Arial Rounded MT Bold', 'Helvetica Rounded', 'Arial', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Avant-Garde
-$avant-garde-font-stack: 'Avant Garde', 'Avantgarde', 'Century Gothic',
-  'CenturyGothic', 'AppleGothic', sans-serif !default;
+$avant-garde-font-stack: 'Avant Garde', 'Avantgarde', 'Century Gothic', 'CenturyGothic', 'AppleGothic', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Calibri
-$calibri-font-stack: 'Calibri', 'Candara', 'Segoe', 'Segoe UI', 'Optima',
-  'Arial', sans-serif !default;
+$calibri-font-stack: 'Calibri', 'Candara', 'Segoe', 'Segoe UI', 'Optima', 'Arial', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Candara
-$candara-font-stack: 'Candara', 'Calibri', 'Segoe', 'Segoe UI', 'Optima',
-  'Arial', sans-serif !default;
+$candara-font-stack: 'Candara', 'Calibri', 'Segoe', 'Segoe UI', 'Optima', 'Arial', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Century-Gothic
-$century-gothic-font-stack: 'Century Gothic', 'CenturyGothic', 'AppleGothic',
-  sans-serif !default;
+$century-gothic-font-stack: 'Century Gothic', 'CenturyGothic', 'AppleGothic', sans-serif !default;
 
 /// Futura, Gill Sans and Franklin Gothic Medium should be carefully stacked and used because of their unusual weight.
 /// @link http://www.awayback.com/revised-font-stack/
 /// @link http://www.cssfontstack.com/Franklin-Gothic-Medium
-$frankin-gothic-font-stack: 'Franklin Gothic Medium', 'Franklin Gothic',
-  'ITC Franklin Gothic', 'Arial', sans-serif !default;
+$frankin-gothic-font-stack: 'Franklin Gothic Medium', 'Franklin Gothic', 'ITC Franklin Gothic', 'Arial', sans-serif !default;
 
 /// Futura, Gill Sans and Franklin Gothic Medium should be carefully stacked and used because of their unusual weight.
 /// Lucida Grande, Futura and Tahoma are mechanically obliqued to fake an italic.
@@ -207,23 +184,19 @@ $gill-sans-font-stack: 'Gill Sans', 'Gill Sans MT', 'Calibri', sans-serif !defau
 $helvetica-font-stack: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Impact
-$impact-font-stack: 'Impact', 'Haettenschweiler', 'Franklin Gothic Bold',
-  'Charcoal', 'Helvetica Inserat', 'Bitstream Vera Sans Bold', 'Arial Black',
-  sans-serif !default;
+$impact-font-stack: 'Impact', 'Haettenschweiler', 'Franklin Gothic Bold', 'Charcoal', 'Helvetica Inserat', 'Bitstream Vera Sans Bold',
+  'Arial Black', sans-serif !default;
 
 /// Lucida Grande, Futura and Tahoma are mechanically obliqued to fake an italic.
 /// @link http://www.awayback.com/revised-font-stack/
 /// @link http://www.cssfontstack.com/Lucida-Grande
-$lucida-grande-font-stack: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans',
-  'Geneva', 'Verdana', sans-serif !default;
+$lucida-grande-font-stack: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'Geneva', 'Verdana', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Optima
-$optima-font-stack: 'Optima', 'Segoe', 'Segoe UI', 'Candara', 'Calibri', 'Arial',
-  sans-serif !default;
+$optima-font-stack: 'Optima', 'Segoe', 'Segoe UI', 'Candara', 'Calibri', 'Arial', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Segoe-UI
-$segoe-font-stack: 'Segoe UI', 'Frutiger', 'Frutiger Linotype', 'Dejavu Sans',
-  'Helvetica Neue', 'Arial', sans-serif !default;
+$segoe-font-stack: 'Segoe UI', 'Frutiger', 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', 'Arial', sans-serif !default;
 
 /// Lucida Grande, Futura and Tahoma are mechanically obliqued to fake an italic.
 /// @link http://www.awayback.com/revised-font-stack/
@@ -231,8 +204,7 @@ $segoe-font-stack: 'Segoe UI', 'Frutiger', 'Frutiger Linotype', 'Dejavu Sans',
 $tahoma-font-stack: 'Tahoma', 'Verdana', 'Segoe', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Trebuchet-MS
-$trebuchet-font-stack: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode',
-  'Lucida Sans', 'Tahoma', sans-serif !default;
+$trebuchet-font-stack: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'Tahoma', sans-serif !default;
 
 /// @link http://www.cssfontstack.com/Verdana
 $verdana-font-stack: 'Verdana', 'Geneva', sans-serif !default;
@@ -243,16 +215,13 @@ $verdana-font-stack: 'Verdana', 'Geneva', sans-serif !default;
 $consolas-font-stack: 'Consolas', 'monaco', monospace !default;
 
 /// @link http://www.cssfontstack.com/Courier-New
-$courier-font-stack: 'Courier New', 'Courier', 'Lucida Sans Typewriter',
-  'Lucida Typewriter', monospace !default;
+$courier-font-stack: 'Courier New', 'Courier', 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace !default;
 
 /// @link http://www.cssfontstack.com/Lucida-Console
-$lucida-console-font-stack: 'Lucida Console', 'Lucida Sans Typewriter', 'monaco',
-  'Bitstream Vera Sans Mono', monospace !default;
+$lucida-console-font-stack: 'Lucida Console', 'Lucida Sans Typewriter', 'monaco', 'Bitstream Vera Sans Mono', monospace !default;
 
 /// @link http://www.cssfontstack.com/Lucida-Sans-Typewriter
-$lucida-sans-typewriter-font-stack: 'Lucida Sans Typewriter', 'Lucida Console',
-  'monaco', 'Bitstream Vera Sans Mono', monospace !default;
+$lucida-sans-typewriter-font-stack: 'Lucida Sans Typewriter', 'Lucida Console', 'monaco', 'Bitstream Vera Sans Mono', monospace !default;
 
 /// @link http://www.cssfontstack.com/Monaco
 $monaco-font-stack: 'monaco', 'Consolas', 'Lucida Console', monospace !default;
