--- a/source/stylesheets/abstracts/_mixins.scss
+++ b/source/stylesheets/abstracts/_mixins.scss
@@ -3,9 +3,9 @@
 /// @access private
 ///
 @mixin _italic-overflow {
+  overflow: visible;
 
   font-style: italic;
-  overflow: visible;
 }
 
 /// Special style for the _&_ used as a conjunction.
@@ -34,12 +34,12 @@
 ///
 @mixin alt-ampersand {
   .amp {
-    // sass-lint:disable-line no-qualifying-elements
+    // stylelint-disable-next-line no-qualifying-elements
     @include _italic-overflow;
-    font-family: $ampersand-font-stack;
 
     font-size: 2em;
     line-height: 0.25;
+    font-family: $ampersand-font-stack;
 
     vertical-align: middle;
 
@@ -69,7 +69,7 @@
 ///
 @mixin alt-preposition {
   .alt {
-    // sass-lint:disable-line no-qualifying-elements
+    // stylelint-disable-next-line no-qualifying-elements
     @include _italic-overflow;
 
     font-family: $alt-font-stack;
@@ -120,17 +120,16 @@
 /// }
 ///
 @mixin inline-block-wrapper {
-  // sass-lint:disable-block no-duplicate-properties
-  $_inline-block-font-stack: 'FreeSans', 'Arimo', 'Droid Sans', 'Helvetica',
-    'Arial', sans-serif;
-  font-family: $_inline-block-font-stack;
-
   font-size: 0;
+  font-family: $_inline-block-font-stack;
   letter-spacing: -0.31em; /* Webkit: collapse white-space between units */
   letter-spacing: normal\9; /* reset IE < 8 */
-
-  text-rendering: optimizespeed; /* Webkit: fixes text-rendering: optimizeLegibility */
   word-spacing: -0.43em\9; /* IE < 8: collapse white-space between units */
+
+  text-rendering: optimizeSpeed; /* Webkit: fixes text-rendering: optimizeLegibility */
+  // sass-lint:disable-block no-duplicate-properties
+
+  $_inline-block-font-stack: 'FreeSans', 'Arimo', 'Droid Sans', 'Helvetica', 'Arial', sans-serif;
 }
 
 /// Helper for an inline-block grid.
@@ -167,14 +166,14 @@
 ///
 @mixin inline-block-item($align: 'top', $font-size: 1rem) {
   display: inline-block;
-  font-family: $text-font-stack;
 
   font-size: $font-size;
+  font-family: $text-font-stack;
   letter-spacing: normal;
+  word-spacing: normal;
 
   text-rendering: auto;
   vertical-align: unquote($align);
-  word-spacing: normal;
 
   zoom: 1;
 }
@@ -201,9 +200,9 @@
 /// }
 ///
 @mixin table-layout-wrapper {
+  display: table;
 
   border-collapse: collapse;
-  display: table;
 
   @content;
 }
@@ -278,16 +277,16 @@
 ///
 @mixin icon-font {
   @include _font-smoothing(true);
-  font-size: 14px; /* font-awesome pixel perfection is at 14px and multiples of 14 */ // sass-lint:disable-line property-units
 
   font-style: normal;
   font-variant: normal;
-  font-weight: normal;
+  font-weight: $font-weights('normal');
+  font-size: 14px; /* font-awesome pixel perfection is at 14px and multiples of 14 */ // stylelint-disable-next-line property-units
   line-height: 1;
 
-  speak: none;
-
   text-transform: none;
+
+  speak: none;
 }
 
 @mixin clearfix($ie: 8) {
@@ -303,11 +302,11 @@
 	 */
   &::before,
   &::after {
-
-    border-collapse: collapse; /* 3 */
+    display: table; /* 2 */
 
     content: ''; /* 1 */
-    display: table; /* 2 */
+
+    border-collapse: collapse; /* 3 */
   }
 
   &::after {
@@ -324,9 +323,9 @@
   &,
   &:link,
   &:visited {
+    text-decoration: inherit;
 
     color: inherit;
-    text-decoration: inherit;
 
     @content;
   }
@@ -354,13 +353,15 @@
 }
 
 /// Make a context based selector a little more friendly
-/// @author Hugo Giraudel
+/// @author Kitty Giraudel
 /// @param {String} $context
 @mixin when-inside($context) {
   #{$context} & {
     @content;
   }
 }
+
+/* stylelint-disable declaration-no-important */
 
 ///
 /// Hide element while making it readable for screen readers
@@ -370,45 +371,45 @@
 /// @link https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css#L119-L133
 ///
 @mixin visually-hidden {
+  position: absolute !important;
 
-  border: 0 !important;
-  clip: rect(1px 1px 1px 1px) !important;
-  clip: rect(1px, 1px, 1px, 1px) !important;
-  clip-path: inset(50%) !important;
+  width: 1px !important;
   height: 1px !important;
+
+  padding: 0 !important;
   margin: -1px;
 
   overflow: hidden !important;
-
-  padding: 0 !important;
-  // sass-lint:disable-block no-duplicate-properties no-important property-units
-  position: absolute !important;
+  clip: rect(1px 1px 1px 1px) !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  clip-path: inset(50%) !important;
 
   white-space: nowrap !important;
 
-  width: 1px !important;
+  border: 0 !important;
 }
 
 @mixin visually-hidden--focusable {
-  // sass-lint:disable-block no-important
   @include visually-hidden;
 
   &:active,
   &:focus {
-    clip: auto !important;
-    clip-path: none !important;
+    position: static !important;
+
+    width: auto !important;
     height: auto !important;
 
     margin: auto;
 
     overflow: visible !important;
-    position: static !important;
+    clip: auto !important;
+    clip-path: none !important;
 
     white-space: normal !important;
-
-    width: auto !important;
   }
 }
+
+/* stylelint-enable declaration-no-important */
 
 /// Truncate and add ellipsis to a string too long for it to fit on a single
 /// line.
@@ -459,12 +460,12 @@
   text-align: justify;
 
   &::after {
-
-    content: '';
     display: inline-block;
-    height: 0;
 
     width: 100%;
+    height: 0;
+
+    content: '';
   }
 }
 
@@ -486,13 +487,13 @@
 /// }
 ///
 @mixin hide-text {
-
-  overflow: hidden;
   /**
 	 * 1. Needed in WebKit-based browsers because of an implementation bug;
 	 *    See: https://code.google.com/p/chromium/issues/detail?id=457146
 	 */
   padding: 0; /* 1 */
+
+  overflow: hidden;
 
   text-indent: 101%;
   white-space: nowrap;
@@ -509,7 +510,7 @@
 
     direction: ltr;
   } @else {
-    font: 0/0 a;
+    font: 0/0;
 
     text-shadow: none;
 
@@ -598,20 +599,11 @@ $no-viewport: false !default;
 ///
 @mixin viewport-unit($property, $value) {
   // sass-lint:disable-block indentation
-
   #{$property}: $value;
-
   $unit: unit($value);
 
   @if (index((vw, vh, vmin, vmax), $unit) != null) {
-    $devices: (
-      (768px, 1024px),
-      
-      (320px, 480px),
-      
-      (320px, 568px)
-        
-    )      ;
+    $devices: ((768px, 1024px), (320px, 480px), (320px, 568px));
 
     @each $device in $devices {
       $device-width: nth($device, 1);
@@ -619,8 +611,7 @@ $no-viewport: false !default;
       $device-query: 'only screen and (-webkit-min-device-pixel-ratio: 1)';
       $device-query: '#{$device-query} and (device-width: #{$device-width})';
       $device-query: '#{$device-query} and (device-height: #{$device-height})';
-      $percent: $value /
-        ($value * 0 + 1); // see https://github.com/sass/sass/issues/533
+      $percent: $value / ($value * 0 + 1); // see https://github.com/sass/sass/issues/533
       $percent-width: $device-width * $percent / 100;
       $percent-height: $device-height * $percent / 100;
 
@@ -642,7 +633,7 @@ $no-viewport: false !default;
 }
 
 /// Returns the opposite direction of each direction in a list
-/// @author Hugo Giraudel
+/// @author Kitty Giraudel
 /// @param {List} $directions - List of initial directions
 /// @return {List} - List of opposite directions
 /// @access private
@@ -662,8 +653,7 @@ $no-viewport: false !default;
     $direction: to-lower-case($direction);
 
     @if map-has-key($direction-map, $direction) {
-      $opposite-directions: append($opposite-directions,
-      unquote(map-get($direction-map, $direction)));
+      $opposite-directions: append($opposite-directions, unquote(map-get($direction-map, $direction)));
     } @else {
       @warn 'No opposite direction can be found for `#{$direction}`. Direction omitted.';
     }
@@ -677,16 +667,16 @@ $no-viewport: false !default;
 /// @param {Color} $color [currentcolor] - Triangle color
 /// @param {number} $size [1em] - Triangle size
 @mixin triangle($direction, $color: currentcolor, $size: 1em) {
-
-  $perpendicular-borders: $size solid transparent;
-  height: 0;
-  width: 0;
-
   z-index: 2;
+
+  width: 0;
+  height: 0;
+
+  border-#{_opposite-direction($direction)}: ($size * 1.5) solid $color; // stylelint-disable-next-line property-sort-order
+  $perpendicular-borders: $size solid transparent;
   @if not index(top right bottom left, $direction) {
     @error 'Direction must be either `top`, `right`, `bottom` or `left`.';
   }
-  border-#{_opposite-direction($direction)}: ($size * 1.5) solid $color; // sass-lint:disable-line property-sort-order
 
   @if $direction == top or $direction == bottom {
     border-right: $perpendicular-borders;
@@ -712,15 +702,16 @@ $no-viewport: false !default;
   @return $level;
 }
 
+/* stylelint-disable property-no-unknown, scss/at-rule-no-unknown, selector-type-no-unknown */
+
 @mixin debug-map($map) {
   @at-root {
     @debug-map {
+      // these properties are for debug only. They do not exist
+      __tostring__: inspect($map);
+      __length__: length($map);
       __depth__: depth($map);
       __keys__: map-keys($map);
-      __length__: length($map);
-      // these properties are for debug only. They do not exist
-      // sass-lint:disable-block no-misspelled-properties
-      __tostring__: inspect($map);
 
       __properties__ {
         @each $key, $value in $map {
@@ -730,6 +721,7 @@ $no-viewport: false !default;
     }
   }
 }
+/* stylelint-enable property-no-unknown, scss/at-rule-no-unknown, selector-type-no-unknown */
 
 /// Helper to set a two dimensional proportion to an element.
 ///
@@ -762,6 +754,10 @@ $no-viewport: false !default;
 /// }
 ///
 @mixin aspect-ratio($ratio) {
+  position: relative;
+
+  $w: nth($ratio, 1);
+  $h: if(length($ratio) == 3, nth($ratio, 3), nth($ratio, 2));
   @if type-of($ratio) != list {
     @error '`aspect-ratio` function expecting a list for `$ratio`; `#{type-of($ratio)}` given.';
   } @else if length($ratio) == 3 and nth($ratio, 2) != 'x' {
@@ -769,9 +765,6 @@ $no-viewport: false !default;
   } @else if length($ratio) < 2 and length($ratio) > 3 {
     @error '`aspect-ratio` function expecting a list with 2 or 3 items for `$ratio`; `#{length($ratio)}` given.';
   }
-
-  $w: nth($ratio, 1);
-  $h: if(length($ratio) == 3, nth($ratio, 3), nth($ratio, 2));
 
   @if type-of($w) != 'number' {
     @error 'the value sent to `width` isn\'t a `number`.';
@@ -785,22 +778,20 @@ $no-viewport: false !default;
     @error 'the value sent to `height` **must** be unitless.';
   }
 
-  position: relative;
-
   &::before {
-
-    content: '';
     float: left;
 
     padding-top: ($h / $w * 100%);
+
+    content: '';
   }
 
   &::after {
     clear: both;
 
-    content: '';
-
     display: table;
+
+    content: '';
   }
 }
 
@@ -814,6 +805,7 @@ $no-viewport: false !default;
   $line-length-lower-gate: map-get($line-lengths, 'min'),
   $line-length-upper-gate: map-get($line-lengths, 'max')
 ) {
+  line-height: $min-line-height;
   @if $font-size == null {
     @error 'the `font-size` of the element **must** be provided to calculate the media query limits.';
   } @else if unit($font-size) == '%' {
@@ -828,15 +820,11 @@ $no-viewport: false !default;
     @error 'the unit of the parameter sent should be `%`, `em`, `rem`. `#{unit($font-size)}` given.';
   }
 
-  line-height: $min-line-height;
-
   @media screen and (min-width: #{$line-length-lower-gate * $font-size}) {
-    line-height: calc(#{$min-line-height * 1em} + (#{$max-line-height} - #{$min-line-height}) * ((
-      100vw - #{$line-length-lower-gate}
-    ) /
-    (
-      #{$line-length-upper-gate / 1em} - #{$line-length-lower-gate / 1em}
-    )));
+    line-height: calc(
+      #{$min-line-height * 1em} + (#{$max-line-height} - #{$min-line-height}) * ((100vw - #{$line-length-lower-gate}) /
+      (#{$line-length-upper-gate / 1em} - #{$line-length-lower-gate / 1em}))
+    );
   }
 
   @media (min-width: #{$line-length-upper-gate * $font-size}) {
@@ -846,6 +834,6 @@ $no-viewport: false !default;
 
 @mixin hyphens {
   hyphens: auto;
-  overflow-wrap: break-word;
   word-wrap: break-word;
+  overflow-wrap: break-word;
 }
