--- a/source/stylesheets/components/_text-field.scss
+++ b/source/stylesheets/components/_text-field.scss
@@ -8,19 +8,19 @@
 %text-field-reset {
   @extend %os-element-reset;
 
-  appearance: textfield; /* 1 */
+  width: 100%;
+
+  padding: 0.1em 0.2em 0;
+
+  cursor: text;
+
+  color: palette('text', 'dark');
 
   background-color: palette('white');
 
   box-sizing: inherit;
 
-  color: palette('text', 'dark');
-
-  cursor: text;
-
-  padding: 0.1em 0.2em 0;
-
-  width: 100%;
+  appearance: textfield; /* 1 */
 
   &:invalid {
     border-radius: $rounded-corner;
@@ -38,16 +38,16 @@
     outline: 1px solid;
   }
 
-  &:focus:required:invalid {
-  }
+  // &:focus:required:invalid {
+  // }
 }
 
 [type='email'] {
   @extend %text-field-reset;
 }
 
-[type='email'][multiple] {
-}
+// [type='email'][multiple] {
+// }
 
 [type='number'] {
   @extend %text-field-reset;
@@ -77,9 +77,9 @@
 [type='search'] {
   @extend %text-field-reset;
 
-  appearance: none; /* 2 */ // sass-lint:disable-line no-vendor-prefixes
-
   outline-offset: -2px; /* 1 */
+
+  appearance: none; /* 2 */ // stylelint-disable-next-line no-vendor-prefixes
 }
 
 /**
@@ -89,7 +89,7 @@
  */
 [type='search']::-webkit-search-cancel-button,
 [type='search']::-webkit-search-decoration {
-  appearance: none; // sass-lint:disable-line no-vendor-prefixes
+  appearance: none; // stylelint-disable-next-line no-vendor-prefixes
 }
 
 [type='tel'] {
@@ -106,20 +106,22 @@
 
 /* textareas
 ---------------------------------------------------------------------------- */
+
 /*
  * 1. Removes default vertical scrollbar in IE6/7/8/9
  * 2. Improves readability and alignment in all browsers
+ * sobral, veja o 2!
  */
 textarea {
   @extend %text-field-reset;
 
-  cursor: text;
+  overflow: auto; /* 1 */
 
   line-height: inherit;
 
-  overflow: auto; /* 1 */
+  vertical-align: top;
+
+  cursor: text;
 
   resize: vertical;
-
-  vertical-align: top;
 }
