--- a/source/stylesheets/qa.scss
+++ b/source/stylesheets/qa.scss
@@ -1,4 +1,3 @@
-@import 'abstracts/constants', 'abstracts/font-stacks', 'abstracts/functions',
-  'abstracts/config', 'abstracts/mixins';
+@import 'abstracts/constants', 'abstracts/font-stacks', 'abstracts/functions', 'abstracts/config', 'abstracts/mixins';
 
 @import 'themes/qa';
