--- a/source/stylesheets/themes/_print.scss
+++ b/source/stylesheets/themes/_print.scss
@@ -1,47 +1,44 @@
 @media print {
-  // sass-lint:disable-block no-color-literals no-important
+  /* stylelint-disable disable-block, no-color-literals, declaration-no-important */
+
   /**
 	 * @see http://www.alistapart.com/articles/goingtoprint/
 	 * @see http://www.merttol.com/articles/css/too-light-for-print.html
 	 */
   * {
-
-    background: transparent !important;
+    text-shadow: none !important;
 
     color: rgb(0, 0, 0) !important; /* Black prints faster: h5bp.com/s */
-    text-shadow: none !important;
+    background: transparent !important;
   }
 
   body {
-
-    background: rgb(255, 255, 255) none;
+    font: 12pt/1.33333 'Palatino Linotype', Palatino, 'Times New Roman', Times, serif;
 
     color: rgb(0, 0, 0);
-    font: 12pt/1.33333 'Palatino Linotype', Palatino, 'Times New Roman', Times,
-      serif;
+    background: rgb(255, 255, 255) none;
   }
 
   a,
   a:link,
   a:visited {
-
-    background: transparent;
-
-    color: rgb(68, 68, 68) !important;
-    font-weight: bold;
+    font-weight: $font-weights('bold');
 
     text-decoration: underline;
+
+    color: rgb(68, 68, 68) !important;
+    background: transparent;
   }
 
   a[href]::after {
+    font-style: italic;
 
+    word-wrap: break-word;
+
+    white-space: pre-wrap;
     color: rgb(51, 51, 51);
 
     content: ' (' attr(href) ') ';
-    font-style: italic;
-    white-space: pre-wrap;
-
-    word-wrap: break-word;
   }
 
   /**
@@ -56,16 +53,14 @@
   }
 
   abbr[title]::after {
-
-    content: ' (' attr(title) ')';
     font-style: italic;
+    content: ' (' attr(title) ')';
   }
 
   pre,
   blockquote {
-
-    border: 1px solid rgb(153, 153, 153);
     page-break-inside: avoid;
+    border: 1px solid rgb(153, 153, 153);
   }
 
   /**
@@ -87,7 +82,7 @@
   }
 
   @page {
-    margin: 0.5cm; // sass-lint:disable-line property-units
+    margin: 0.5cm; // stylelint-disable-next-line property-units
   }
 
   p,
@@ -110,14 +105,13 @@
   }
 
   [role='main'] {
-
-    border: 0;
     float: none !important;
-    margin: 0 5%;
-
-    padding: 0;
 
     width: auto;
+    padding: 0;
+
+    margin: 0 5%;
+    border: 0;
   }
 
   nav,
@@ -126,3 +120,5 @@
     display: none;
   }
 }
+
+/* stylelint-enable disable-block, no-color-literals, declaration-no-important */
